2010-06-20   Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl: set the command name to texi2any when it is not
	a known command name (ie $0 or --program is not texi2html, 
	makeinfo or texi2any). Report from Karl.

2010-06-12   Patrice Dumas  <pertusus@free.fr>

	* texi2html.init, texi2html.pl, formats/html.init: new output
	configuration variable, currently only used in html,
	$DATE_IN_HEADER to have the generation date output in headers. 
	Report from Benno Schulenberg.

2010-04-24   Patrice Dumas  <pertusus@free.fr>

	* formats/docbook.init: don't format @b and @i as lineannotation
	in preformatted output, report from Per Bothner.

2010-04-21   Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl: really initialize state when formatting special
	regions outside of document.

2010-04-03   Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl: @part is stopped by an appendix.
	Use part as section target, if the section is associated with 
	a part.

2010-03-31   Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl: handle part in html. 
	@part are associated with the following sectionning command,
	like @chapter.
	nodes associated with @part are associated with this sectionning
	command too. 
	@part are not included in the toplevelnext and toplevelprev 
	chains and these directions are used for node next and prev, 
	bypassing @part.
	* formats/html.init: add a rule after a @part.
	* texi2html.init: add back some default definitions for 
	all the layout subroutines, in case they are used in user-defined 
	functions and not defined in the default format.

2010-03-28   Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl, formats/info.init, formats/docbook.init, 
	formats/xml.init: handle @part in info, xml and docbook.
	* texi2html.pl, formats/docbook.init, formats/xml.init: 
	use childnext, the next child element of an element, instead
	of sectionnext to determine if an element has to be closed
	in docbook or xml. This fixes the tree when there is first a